--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "happy-dom": "^18.0.1",
     "playwright": "^1.55.0",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "vite": "^7.1.3",
     "vitest": "^3.2.4",
     "vitest-browser-react": "^1.0.1",
     "vitest-fetch-mock": "^0.4.5"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-router": "^1.131.28",
