--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tanstack/react-router": "^1.131.28",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
     "tailwindcss": "^4.1.12"
   }
 }
